# taskcascade-project-juggler

./: .gitignore  Agents.md  README.md
backend/: Cargo.toml
backend/migrations/: 0001_create_taskcascade.sql  0002_add_project_color.sql  0003_add_task_deleted_at.sql
backend/src/: app.rs  domain.rs  main.rs
backend/tests/: project_colors.rs  restore.rs  trash.rs
docs/: DecisionLog.md  Design.HighLevel.md  RequirementSpecification.md  VisualDesign.DarkTheme.md
docs/superpowers/plans/: 2026-07-13-drag-drop-archive-trash.md
docs/superpowers/specs/: 2026-07-10-favicon-design.md  2026-07-11-restore-archived-tasks-design.md  2026-07-11-single-binary-packaging-design.md  2026-07-13-drag-drop-archive-trash-design.md
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
scripts/: start.ps1
